# gix-portal

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
.kiro/steering/: product.md  structure.md  tech.md
.qoder/quests/: improve-uiux.md
docs/p2p-drive/: .cursorrules  AI_CONTEXT.md  Cargo.reference.toml  IMPLEMENTATION_PLAN.md  README.md  api-reference.md  architecture.md  frontend-design.md  implementation-plan.md  performance.md  rust-bestpractice.md  security.md
scripts/: release.ps1
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: transfer_bench.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: audit.rs  conflict.rs  drive.rs  files.rs  identity.rs  locking.rs  mod.rs  presence.rs  security.rs  sync.rs
src-tauri/src/core/: audit.rs  channel.rs  cleanup.rs  conflict.rs  drive.rs  error.rs  events.rs  file.rs  identity.rs  locking.rs  mod.rs  presence.rs  rate_limit.rs  validation.rs  watcher.rs
src-tauri/src/crypto/: access.rs  encryption.rs  encryption_manager.rs  invite.rs  key_exchange.rs  keys.rs  mod.rs
src-tauri/src/network/: docs.rs  endpoint.rs  gossip.rs  mod.rs  sync.rs  transfer.rs
src-tauri/src/storage/: db.rs
src-tauri/tests/: load_tests.rs  p2p_tests.rs  security_tests.rs  sync_tests.rs  transfer_tests.rs
src/components/: ConfirmDialog.tsx  ConflictPanel.tsx  (+22 more)
(+46 files in other folders)
