[package]
name = "gix"
version = "0.1.0"
description = "P2P Realtime Drive Sharing"
authors = ["you"]
edition = "2021"

[lib]
name = "gix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Iroh P2P
iroh = "0.35"
iroh-blobs = "0.35"
iroh-gossip = "0.35"
iroh-docs = { version = "0.35", features = ["rpc"] }
iroh-io = "0.6"

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
rand = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-lite = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bincode = "2"
base64 = "0.22"

# Database
redb = "2"

# File system
walkdir = "2"
notify = { version = "6", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-mini = "0.4"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
